<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>castle.comp3021</groupId>
    <artifactId>COMP3021-2020Fall-PA</artifactId>
    <version>1.0</version>

    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>regression-tests</id>
                        <configuration>
                            <argLine>--enable-preview</argLine>
                            <excludes>
                                <exclude>castle/comp3021/assignment/pa3/*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>pa3-tests</id>
                        <configuration>
                            <argLine>--enable-preview</argLine>
                            <includes>
                                <include>castle/comp3021/assignment/pa3/*</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- Build an executable JAR -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>PA2-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <classpathPrefix>lib/</classpathPrefix>
                                    <mainClass>castle.comp3021.assignment.gui.GUIMain</mainClass>
                                </manifest>
                            </archive>
                            <classifier>2</classifier>
                            <finalName>PA</finalName>
                            <outputDirectory>${basedir}/artifacts</outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>PA3-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <classpathPrefix>lib/</classpathPrefix>
                                    <mainClass>castle.comp3021.assignment.textversion.Main</mainClass>
                                </manifest>
                            </archive>
                            <finalName>PA</finalName>
                            <classifier>3</classifier>
                            <outputDirectory>${basedir}/artifacts</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>castle.comp3021.assignment.gui.Launcher</mainClass>
                                </transformer>
                            </transformers>
                            <finalName>PA2-fat</finalName>
                            <outputDirectory>${basedir}/artifacts</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.wvengen</groupId>
                <artifactId>proguard-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>obfuscate-PA2</id>
                        <phase>package</phase>
                        <goals>
                            <goal>proguard</goal>
                        </goals>
                        <configuration>
                            <obfuscate>true</obfuscate>
                            <injar>PA-2.jar</injar>
                            <outjar>PA2_obfuscated.jar</outjar>
                            <outputDirectory>${basedir}/artifacts</outputDirectory>
                            <proguardInclude>${basedir}/artifacts/PA2-proguard-obfuscate.config</proguardInclude>
                            <libs>
                                <lib>${java.home}</lib>
                            </libs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>obfuscate-PA3</id>
                        <phase>package</phase>
                        <goals>
                            <goal>proguard</goal>
                        </goals>
                        <configuration>
                            <obfuscate>true</obfuscate>
                            <injar>PA-3.jar</injar>
                            <outjar>PA3_obfuscated.jar</outjar>
                            <outputDirectory>${basedir}/artifacts</outputDirectory>
                            <proguardInclude>${basedir}/artifacts/PA2-proguard-obfuscate.config</proguardInclude>
                            <libs>
                                <lib>${java.home}</lib>
                            </libs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>castle.comp3021.assignment.gui.GUIMain</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>14.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>12.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>14.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>14.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>14.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.7.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>


</project>